--- a/ApplicaitonGeneration/Views/Shared/EmailSent.cshtml
+++ b/ApplicaitonGeneration/Views/Shared/EmailSent.cshtml
@@ -1,9 +1,36 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Email Sent.";
+    Layout = null;
 }
 
-<hgroup>
-    <h1 class="text-error">Email Sent.</h1>
-</hgroup>
- 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+
+    <style>
+    </style>
+
+</head>
+
+<body>
+    <div class="container body-content" style="padding-top:0px;">
+        <div class="row">
+            <div class="col-xs-12 text-center">
+                <h1 class="text-error text-center">Email sent.</h1>
+            </div>
+        </div>
+
+    </div>
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+</body>
+</html>
