--- a/ApplicaitonGeneration/Views/Shared/Thanks.cshtml
+++ b/ApplicaitonGeneration/Views/Shared/Thanks.cshtml
@@ -1,17 +1,58 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Thanks!";
+    Layout = null;
 }
 
-<hgroup>
-    <h1 class="text-error">Thanks!</h1>
-    <h2 class="text-error">You've completed our survey.</h2>
-</hgroup>
-    @using (Html.BeginForm("Email", "Survey", FormMethod.Post))
-    {
-        <div>
-            @Html.AntiForgeryToken()
-            <input name="Email" type="text" placeholder="Enter Email" />
-            <button type="submit" class="btn">Send</button>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+
+    <style>
+    </style>
+
+</head>
+
+<body>
+    <div class="container body-content" style="padding-top:0px;">
+        <div class="row">
+            <div class="col-xs-12 text-center">
+                <h1 class="text-error text-center">Thank you.</h1>
+            </div>
         </div>
-    }
+
+        <div class="row" style="padding-top:15px;">
+            <div class="col-xs-12">
+                <h4 class="text-error">You're almost done. Simply enter your email address to recieve ______</h4>
+            </div>
+        </div>
+        @using (Html.BeginForm("Email", "Survey", FormMethod.Post))
+        {
+            <div>
+                @Html.AntiForgeryToken()
+                <div class="row">
+                    <div class="col-xs-12" style="padding-top:30px;">
+                        <input name="Email" class="input-borderbottom" type="text" style="width:100%" placeholder="johndoe@domain.com" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12" style="padding-top:40px;">
+                        <button type="submit" style="box-shadow: 3px 3px 1px #888888; width:100%; background-color:#FB5733; font-weight:800;font-size:18px;color:#624742;" class="btn">Submit</button>
+                    </div>
+                </div>
+            </div>
+        }
+
+    </div>
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+</body>
+</html>
