--- a/ApplicaitonGeneration/Views/Shared/_Layout.cshtml
+++ b/ApplicaitonGeneration/Views/Shared/_Layout.cshtml
@@ -7,6 +7,9 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -37,7 +40,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content" style="padding-top:60px;">
+    <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
@@ -45,6 +48,8 @@
         </footer>
     </div>
 
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
