--- a/ApplicaitonGeneration/Views/Survey/BodyAndPoleThanksYou.cshtml
+++ b/ApplicaitonGeneration/Views/Survey/BodyAndPoleThanksYou.cshtml
@@ -34,7 +34,7 @@
         <br />
         <br />
         <div class="row" style="padding-top:15px;">
-            <div class="col-xs-12">
+            <div class="col-xs-12 row-centered">
                 <h4 class="text-error">Thank you for taking the time to let us know how you feel!</h4>
                 <h4 class="text-error">We hope you have a great time at Body & Pole.</h4>
                 <br />
