added feedback page feature, create guid to track between pages

--- a/ApplicaitonGeneration/Views/Answers/Edit.cshtml
+++ b/ApplicaitonGeneration/Views/Answers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ApplicationGeneration.Models.SurveyViewModel>
+﻿@model ApplicationGeneration.Models.SurveyViewModel
 
 @{
     ViewBag.Title = "Edit";
