update body and pole to be centered

--- a/ApplicaitonGeneration/Views/Survey/BodyAndPoleFeedback.cshtml
+++ b/ApplicaitonGeneration/Views/Survey/BodyAndPoleFeedback.cshtml
@@ -28,39 +28,46 @@
             <div class="col-xs-6 text-center">
                 <img src="~/Content/bodyandpolefulllogowhite.png"
                      alt="boohoo"
-                     class="img-responsive" />
+                     class="img-responsive" 
+                     style="padding-bottom:3px; padding: 0px 0px 0px 0px;margin:0px auto;height: 175px;"/>
             </div>
             <div class="col-xs-3 text-center"></div>
         </div>
         <br />
         <br />
         @using (Html.BeginForm("FeedbackSubmit", "Survey", FormMethod.Post))
-            {
-                @Html.AntiForgeryToken()
-                @Html.HiddenFor(model => model.Guid)
-                @Html.HiddenFor(model => model.BeaconId)
-                <div class="row" style="margin: 0px auto;">
-                    <div class="col-xs-12" style="padding-top:30px;">
-                        <textarea name="FeedbackString" class="input-borderbottom" 
-                                  style="max-width: 500px; 
+        {
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(model => model.Guid)
+            @Html.HiddenFor(model => model.BeaconId)
+            <div class="row" style="padding-bottom:30px;">
+                <div class="col-xs-3 text-center"></div>
+                <div class="col-xs-6 text-center">
+                    <textarea name="FeedbackString" class="input-borderbottom"
+                              style="max-width: 500px; margin: 0px auto;
                                         width: 100%;"
-                                        placeholder="Please give us more feedback on how we can improve"></textarea>
-                    </div>
-                </div>
-                <div class="row" style="margin: 0px auto;">
-                    <div class="col-xs-12" style="padding-top:40px;">
-                        <button type="submit" style="box-shadow: 3px 3px 1px #888888; 
-                                                width:100%; 
-                                                background-color:#FB5733; 
-                                                font-weight:800;
-                                                font-size:18px;
-                                                color:#624742; 
-                                                max-width: 325px;"
-                                class="btn">Submit</button>
-                    </div>
-                </div>
-        }
+                              placeholder="Please give us more feedback on how we can improve"></textarea>
 
+                </div>
+                <div class="col-xs-3 text-center"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3 text-center"></div>
+                <div class="col-xs-6 text-center">
+                    <button type="submit" style="box-shadow: 3px 3px 1px #888888; margin: 0px auto;
+                                            width:100%;
+                                            background-color:#EC2E91;
+                                            font-weight:800;
+                                            font-size:18px;
+                                            color:white;
+                                            max-width: 200px;"
+                            class="btn">
+                        Submit
+                    </button>
+                </div>
+                <div class="col-xs-3 text-center"></div>
+            </div>
+        }
     </div>
 
     @Scripts.Render("~/bundles/jquery")
