--- a/ApplicaitonGeneration/Views/Survey/BodyAndPoleThanksYou.cshtml
+++ b/ApplicaitonGeneration/Views/Survey/BodyAndPoleThanksYou.cshtml
@@ -27,7 +27,8 @@
             <div class="col-xs-6 text-center">
                 <img src="~/Content/bodyandpolefulllogowhite.png"
                      alt="boohoo"
-                     class="img-responsive" />
+                     class="img-responsive"
+                     style="padding-bottom:3px; padding: 0px 0px 0px 0px;margin:0px auto;height: 175px;" />
             </div>
             <div class="col-xs-3 text-center"></div>
         </div>
