- updated questions - made questions wider - improved font on feedback page - Page refreshes to survey after 5 seconds

--- a/RaterBee/Views/Survey/BodyAndPoleFeedback.cshtml
+++ b/RaterBee/Views/Survey/BodyAndPoleFeedback.cshtml
@@ -43,10 +43,13 @@
             <div class="row" style="padding-bottom:30px;">
                 <div class="col-xs-3 text-center"></div>
                 <div class="col-xs-6 text-center">
+
+                    
+                    <div style="font-size: 18px;  font-weight: bold; padding-top: 13px;">Please tell us how we can better serve you</div>
                     <textarea name="FeedbackString" class="input-borderbottom"
                               style="max-width: 500px; margin: 0px auto;
                                         width: 100%;"
-                              placeholder="Please give us more feedback on how we can improve"></textarea>
+                             ></textarea>
 
                 </div>
                 <div class="col-xs-3 text-center"></div>
