--- a/RaterBee/Views/Survey/BodyAndPoleThanksYou.cshtml
+++ b/RaterBee/Views/Survey/BodyAndPoleThanksYou.cshtml
@@ -17,7 +17,14 @@
 
     <style>
     </style>
+    <script>
+        window.setTimeout(function () {
 
+            // Move to a new location or you can do something else
+            window.location.href = "http://raterbee.azurewebsites.net/survey/new/5";
+
+        }, 5000);
+    </script>
 </head>
 
 <body style="padding-top:10px;">
